Modify models, view, urls, serializers fro reviews and comments, modify permission

--- a/api_yamdb/static/redoc.yaml
+++ b/api_yamdb/static/redoc.yaml
@@ -573,7 +573,7 @@ paths:
     get:
       tags:
         - REVIEWS
-      operationId: Полуение отзыва по id
+      operationId: Получение отзыва по id
       description: |
         Получить отзыв по id для указанного произведения.
 
